# ECLIPSE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
release_assets/: encoder_config.json
src/eclipse_ms/: __init__.py  cli.py  cluster.py  config.py  consensus.py  embed.py  layers.py  modelhub.py  models.py
src/specclust/: __init__.py  cli.py  cluster.py  config.py  consensus.py  embed.py  layers.py  modelhub.py  preprocessing.py
tests/: test_cluster_modelhub.py  test_models.py  test_preprocessing.py
training/: README.md  export_encoder.py
training/reference/: SpecCheckDataPrepVSC.py  SpecCheckVSC.py  SpecClust_viz.py  consensus_reference.py
