[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specclust"
version = "0.1.0"
description = "Conditional spectrum autoencoder and clustering for MS/MS dark-proteome discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Frederique Vilenne", email = "frederique.vilenne@uhasselt.be" },
]
keywords = ["mass spectrometry", "proteomics", "autoencoder", "clustering", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Core install: everything needed to LOAD the model, EMBED spectra, and CLUSTER.
# TensorFlow is heavy; it stays a hard dependency because the encoder needs it.
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "tensorflow>=2.13",
    "platformdirs>=3.0",
    "tqdm>=4.64",
]

[project.optional-dependencies]
hdbscan = ["hdbscan>=0.8.33"]
viz = ["matplotlib>=3.6", "umap-learn>=0.5"]
mzml = ["pyteomics>=4.6"]
# Everything required to (re)train and to run the HPC data-prep scripts.
train = ["pyteomics>=4.6", "regex>=2023.0", "joblib>=1.2", "tqdm>=4.64"]
dev = ["pytest>=7.0", "ruff>=0.1", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/VilenneFrederique/specclust"
Repository = "https://github.com/VilenneFrederique/specclust"
Issues = "https://github.com/VilenneFrederique/specclust/issues"

[project.scripts]
specclust = "specclust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specclust"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
